--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: tokendito
+        username: jpsevigny
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Extract Docker metadata
       id: meta
