--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,18 +56,6 @@ jobs:
         cache-to: type=gha,mode=max
       env:
         DOCKER_CONTENT_TRUST: 1
-    - name: Set up trust signatures for releases
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      run: |
-        mkdir -p ~/.docker/trust/private
-        echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-        chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-        docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-      env:
-        DOCKER_CONTENT_TRUST: 1
-        DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-        DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-        DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
     - name: Build and push container for releases
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: docker/build-push-action@v4
@@ -83,6 +71,13 @@ jobs:
       env:
         DOCKER_CONTENT_TRUST: 1
         DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+    - name: Sign and push docker image
+      uses: sudo-bot/action-docker-sign@latest
+      with:
+        image-ref: "docker.io/jpsevigny/jptest:${{ steps.meta.outputs.tags }}"
+        private-key-id: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
+        private-key: "${{ secrets.DOCKER_PRIVATE_KEY }}"
+        private-key-passphrase: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
     - name: Verify signatures
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: |
