--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -55,11 +55,15 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+    
+    - name: Sleep for 30 seconds
+      run: sleep 30s
+      shell: bash
 
     - name: Sign and push docker image
       uses: sudo-bot/action-docker-sign@latest
       with:
-        image-ref: "docker.io/jpsevigny/jptest:1.4.0"
+        image-ref: "docker.io/jpsevigny/jptest:1.5.0"
         private-key-id: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
         private-key: "${{ secrets.DOCKER_PRIVATE_KEY }}"
         private-key-passphrase: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
