--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,10 +63,11 @@ jobs:
     - name: Sign and push docker image
       uses: sudo-bot/action-docker-sign@latest
       with:
-        image-ref: "docker.io/jpsevigny/jptest:1.5.0"
+        image-ref: "docker.io/jpsevigny/jptest:1.6.0"
         private-key-id: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
         private-key: "${{ secrets.DOCKER_PRIVATE_KEY }}"
         private-key-passphrase: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+        sign-manifest: true
     - name: Verify signatures
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: |
