--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,39 +56,20 @@ jobs:
         cache-to: type=gha,mode=max
       env:
         DOCKER_CONTENT_TRUST: 1
-    - name: Set up trust signatures for releases
+    - name: sign images and push
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: |
         mkdir -p ~/.docker/trust/private
         echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
         chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
         docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-      env:
-        DOCKER_CONTENT_TRUST: 1
-        DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-        DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-        DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-    - name: Build and push container for releases
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        sbom: true
-        platforms: linux/amd64,linux/arm64
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-      env:
-        DOCKER_CONTENT_TRUST: 1
-        DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-        DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-        DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-    - name: sign images
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      run: |
         echo "${{ steps.meta.outputs.tags }}" |  xargs -I {} -n 1 docker trust sign {}
+        echo "${{ steps.meta.outputs.tags }}" |  xargs -I {} -n 1 docker push {}
+      env:
+        DOCKER_CONTENT_TRUST: 1
+        DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
+        DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
+        DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
     - name: Verify signatures
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: |
