--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,7 +63,8 @@ jobs:
         echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
         chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
         docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-        echo "${{ steps.meta.outputs.tags }}" |  xargs -I {} -n 1 docker trust sign {}
+        docker images
+        echo "${{ steps.meta.outputs.tags }}" |  xargs -I {} -n 1 docker trust sign --local {}
         echo "${{ steps.meta.outputs.tags }}" |  xargs -I {} -n 1 docker push {}
       env:
         DOCKER_CONTENT_TRUST: 1
