--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,8 +9,8 @@ env:
   IMAGE_NAME: jpsevigny/jptest
 
 jobs:
-  dockerhubpublish:
-    name: Build and Publish Docker Container
+  dockerbuild:
+    name: Docker Container
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -48,14 +48,12 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        push: false
+        load: true
         platforms: linux/amd64,linux/arm64
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-      env:
-        DOCKER_CONTENT_TRUST: 1
     - name: sign images and push
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: |
