--- a/.github/workflows/sign-arm64.yml
+++ b/.github/workflows/sign-arm64.yml
@@ -14,22 +14,20 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-    - uses: uraimo/run-on-arch-action@v2.1.0
-      name: run on arm64
-      id: runcmd
+    - uses: uraimo/run-on-arch-action@v2.1.2
+      name: sign on arm64
       with: 
         arch: arm64
         distro: ubuntu18.04
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      run: |
-        mkdir -p ~/.docker/trust/private
-        echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-        chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-        docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-        docker pull jpsevigny/jptest:1.22.0
-        docker trust sign jpsevigny/jptest:1.22.0
-        docker push jpsevigny/jptest:1.22.0
-      env:
-        DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-        DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-        DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+        env: |
+          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
+          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
+          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+        run: |
+          mkdir -p ~/.docker/trust/private
+          echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
+          chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
+          docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
+          docker pull jpsevigny/jptest:1.22.0
+          docker trust sign jpsevigny/jptest:1.22.0
+          docker push jpsevigny/jptest:1.22.0
