--- a/.github/workflows/sign-arm64.yml
+++ b/.github/workflows/sign-arm64.yml
@@ -3,22 +3,18 @@ on:
   push:
     branches: '**'
 
-env:
-  REGISTRY: docker.io
-  IMAGE_NAME: jpsevigny/jptest
-
 jobs:
   arm64_sign:
     runs-on: ubuntu-18.04
     name: Sign container for arm64 arch.
-    strategy:
-      fail-fast: false
     steps:
     - uses: uraimo/run-on-arch-action@v2.5.0
       name: sign on arm64
+      id: sign
       with: 
         arch: arm64
         distro: ubuntu18.04
+        base_image: ubuntu:18.04
         env: |
           DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
           DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
