--- a/.github/workflows/sign-arm64.yml
+++ b/.github/workflows/sign-arm64.yml
@@ -5,16 +5,15 @@ on:
 
 jobs:
   arm64_sign:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Sign container for arm64 arch.
     steps:
     - uses: uraimo/run-on-arch-action@v2.5.0
       name: sign on arm64
       id: sign
       with: 
-        arch: arm64
-        distro: ubuntu18.04
-        base_image: ubuntu:18.04
+        arch: aarch64
+        distro: ubuntu22.04
         env: |
           DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
           DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
