--- a/.github/workflows/sign-manifest.yml
+++ b/.github/workflows/sign-manifest.yml
@@ -1,3 +1,4 @@
+name: create and sign manifest
 on:
   push:
     branches: '**'
@@ -6,7 +7,7 @@ jobs:
   sign-manifest:
     name: Sign the docker hub manifest
     runs-on: ubuntu-latest
-    needs: push_to_registry
+    # needs: push_to_registry
     steps:
         - uses: actions/setup-go@v2
           with:
