--- a/.github/workflows/sign-manifest.yml
+++ b/.github/workflows/sign-manifest.yml
@@ -14,9 +14,10 @@ jobs:
             go-version: '^1.12'
         - name: 'Install module'
           run: |
-            export GO111MODULE=on
-            go get github.com/theupdateframework/notary
-            go install -tags pkcs11 github.com/theupdateframework/notary/cmd/notary@latest
+            # export GO111MODULE=on
+            # go get github.com/theupdateframework/notary
+            # go install -tags pkcs11 github.com/theupdateframework/notary/cmd/notary@latest
+            go install github.com/theupdateframework/notary/cmd/notary@latest
             notary --help
         - name: Login to DockerHub
           uses: docker/login-action@v1
