--- a/.github/workflows/sign-manifest.yml
+++ b/.github/workflows/sign-manifest.yml
@@ -19,12 +19,12 @@ jobs:
             # go install -tags pkcs11 github.com/theupdateframework/notary/cmd/notary@latest
             go install github.com/theupdateframework/notary/cmd/notary@latest
             notary --help
-        - name: Login to DockerHub
-          uses: docker/login-action@v1
+        - name: Login to Docker Hub
+          uses: docker/login-action@v2
           with:
             registry: docker.io
-            username: ${{ secrets.DOCKER_REPOSITORY_LOGIN }}
-            password: ${{ secrets.DOCKER_REPOSITORY_PASSWORD }}
+            username: jpsevigny
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
         - name: Create a manifest
           run: |
             DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create docker.io/jpsevigny/jptest:1.24 \
