--- a/.github/workflows/sign-manifest.yml
+++ b/.github/workflows/sign-manifest.yml
@@ -27,9 +27,9 @@ jobs:
             password: ${{ secrets.DOCKERHUB_TOKEN }}
         - name: Create a manifest
           run: |
-            DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create docker.io/jpsevigny/jptest:1.24 \
-                docker.io/jpsevigny/jptest:1.24-amd64 \
-                docker.io/jpsevigny/jptest:1.24-arm64
+            DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create docker.io/jpsevigny/jptest:1 \
+                docker.io/jpsevigny/jptest:1.amd64 \
+                docker.io/jpsevigny/jptest:1.arm64
                 --amend
 
         - name: Sign and push the manifest
