--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,8 @@ jobs:
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+      with:
+        buildkitd-flags: --debug
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
