--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -103,8 +103,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - merge
-    steps: 
+    steps:
       -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
         name: pull image 
         run: |
           echo "docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}"
