--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -102,7 +102,7 @@ jobs:
   sign: 
     runs-on: ubuntu-latest
     needs: 
-      - merge
+      - merge2
     steps:
       -
         name: Docker meta
