--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -102,7 +102,8 @@ jobs:
   sign: 
     runs-on: ubuntu-latest
     needs: 
-      - merge2
+      - merge
+    if: ${{ always() && contains(needs.*.result, 'failure') }}
     steps:
       -
         name: Docker meta
