--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -13,10 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
     steps:
       -
         name: Checkout
@@ -40,43 +36,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push by digest
-        id: build
+        name: Build and push amd64
+        id: buildamd64
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: ${{ matrix.platform }}
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
-      -
-        name: Export digest
-        run: |
-          mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
-      -
-        name: Upload digest
-        uses: actions/upload-artifact@v3
+          platforms: linux/amd64
+          tags: "${{ env.REGISTRY_IMAGE }}:${{github.sha}}-amd64"
+      - 
+        name: Build and push arm64
+        id: buildarm64
+        uses: docker/build-push-action@v4
         with:
-          name: digests
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
-  
-  merge:
+          context: .
+          platforms: linux/arm64
+          tags: "${{ env.REGISTRY_IMAGE }}:${{github.sha}}-arm64"
+
+  create_manifest:
     runs-on: ubuntu-latest
     needs:
       - build
     steps:
-      -
-        name: Download digests
-        uses: actions/download-artifact@v3
-        with:
-          name: digests
-          path: /tmp/digests
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       -
         name: Docker meta
         id: meta
@@ -89,20 +69,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Create manifest list and push
-        working-directory: /tmp/digests
+      - 
+        name: create manifest and push it
         run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
-      -
-        name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}  ${{ env.REGISTRY_IMAGE }}:${{github.sha}}-arm64  ${{ env.REGISTRY_IMAGE }}:${{github.sha}}-amd64
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
     needs: 
-      - merge
+      - create_manifest
     if: ${{ always() && contains(needs.*.result, 'failure') }}
     steps:
       -
