--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -38,21 +38,15 @@ jobs:
       -
         name: Build and push amd64
         id: buildamd64
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64
-          push: true
-          tags: "${{ env.REGISTRY_IMAGE }}:${{github.sha}}-amd64"
+        run: |
+          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"
+          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"  
       - 
         name: Build and push arm64
         id: buildarm64
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/arm64
-          push: true
-          tags: "${{ env.REGISTRY_IMAGE }}:${{github.sha}}-arm64"
+        run: |
+          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-arm64"
+          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-arm64"  
 
   create_manifest:
     runs-on: ubuntu-latest
