--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -39,6 +39,7 @@ jobs:
         name: Build and push amd64
         id: buildamd64
         run: |
+          echo "docker buildx build . --platform linux/amd64 --tag \"${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64\""
           docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"
           docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"  
       - 
