--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -39,15 +39,14 @@ jobs:
         name: Build and push amd64
         id: buildamd64
         run: |
-          echo "docker buildx build . --platform linux/amd64 --tag \"${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64\""
-          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"
-          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-amd64"  
+          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64"
+          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64"  
       - 
         name: Build and push arm64
         id: buildarm64
         run: |
-          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-arm64"
-          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${github.sha}}-arm64"  
+          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64"
+          docker push "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64"  
 
   create_manifest:
     runs-on: ubuntu-latest
