--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -72,13 +72,14 @@ jobs:
       - 
         name: create manifest and push it
         run: |
+          echo "version is ${{ steps.meta.outputs.version }}"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
     needs: 
       - create_manifest
-    if: ${{ always() && contains(needs.*.result, 'failure') }}
+    # if: ${{ always() && contains(needs.*.result, 'failure') }}
     steps:
       -
         name: Docker meta
