--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -73,8 +73,8 @@ jobs:
         name: create manifest and push it
         run: |
           echo "version is ${{ steps.meta.outputs.version }}"
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --amend ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
     needs: 
@@ -115,7 +115,7 @@ jobs:
         name: sign manifests and push to registry
         run: |
           docker trust sign ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
         env:
           DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
           DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
