--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -73,7 +73,7 @@ jobs:
         name: create manifest and push it
         run: |
           echo "version is ${{ steps.meta.outputs.version }}"
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --amend ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
           docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
