--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -39,18 +39,18 @@ jobs:
         name: Build and push amd64
         id: buildamd64
         run: |
-          echo "docker buildx build . --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --load"
-          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64" --load
-        env: 
-          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
+          echo "docker buildx build . --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --push"
+          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64" --push
+#        env: 
+#          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
       - 
         name: Build and push arm64
         id: buildarm64
         run: |
           echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64 --load"
           docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64" --load
-        env: 
-          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
+ #       env: 
+ #         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 
   create_manifest:
     runs-on: ubuntu-latest
@@ -72,9 +72,11 @@ jobs:
       - 
         name: create manifest and push it
         run: |
+          docker --version
           echo "version is ${{ steps.meta.outputs.version }}"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
-          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+#          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
     needs: 
