--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           echo "docker buildx build . --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --push"
           docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64" --push
+          docker manifest rm ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
 #        env: 
 #          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
       - 
@@ -49,6 +50,9 @@ jobs:
         run: |
           echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64 --load"
           docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64" --load
+          docker manifest rm ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+        env: 
+          DOCKER_CONTENT_TRUST: 0
  #       env: 
  #         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 
@@ -72,7 +76,6 @@ jobs:
       - 
         name: create manifest and push it
         run: |
-          docker --version
           echo "version is ${{ steps.meta.outputs.version }}"
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
