--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -39,8 +39,9 @@ jobs:
         name: Build and push amd64
         id: buildamd64
         run: |
-          echo "docker buildx build . --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 --push"
-          docker buildx build . --platform linux/amd64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64" --push
+          echo "docker build . --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64"
+          docker build . --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64"
+          docker push  "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64"
 #          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
 #        env: 
 #          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
@@ -77,10 +78,11 @@ jobs:
         name: create manifest and push it
         run: |
           echo "version is ${{ steps.meta.outputs.version }}"
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
-#          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+#          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          # buildx builds a manifest list, add our amd68 manifest to it
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
+          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
   sign: 
     runs-on: ubuntu-latest
     needs: 
