--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -2,10 +2,11 @@ name: ci
 
 on:
   push:
-    branches:
-      - "main"
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+
 
 env:
+  REGISTRY: docker.io
   REGISTRY_IMAGE: jpsevigny/jptest
 
 jobs:
