--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -42,6 +42,7 @@ jobs:
           docker buildx version
           docker --version
           echo "docker buildx build . --provenance=false --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --push"
+          docker buildx build . --provenance=false --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --push
 
         env:
           DOCKER_CONTENT_TRUST: 1
@@ -53,7 +54,7 @@ jobs:
           docker buildx version
           docker --version
           echo "docker buildx build . --provenance=false --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
-          # docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
+          docker buildx build . --provenance=false --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
           # DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
         env: 
           DOCKER_CONTENT_TRUST: 1
