--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -83,10 +83,10 @@ jobs:
           # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 
           # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 
           echo "version is ${{ steps.meta.outputs.version }}" 
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          # DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+          # docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
         env: 
-          DOCKER_CONTENT_TRUST: 
+          DOCKER_CONTENT_TRUST: 1
 #  sign: 
 #    runs-on: ubuntu-latest
 #    needs: 
