--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -82,10 +82,15 @@ jobs:
           # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 
           # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 
           echo "version is ${{ steps.meta.outputs.version }}" 
-          # DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-          # docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
         env: 
           DOCKER_CONTENT_TRUST: 0
+          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
+          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
+          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+          DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+
 #  sign: 
 #    runs-on: ubuntu-latest
 #    needs: 
