--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -109,53 +109,7 @@ jobs:
           DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
           DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
           DOCKER_CLI_EXPERIMENTAL: enabled
-#  sign: 
-#    runs-on: ubuntu-latest
-#    needs: 
-#      - create_manifest
-#    # if: ${{ always() && contains(needs.*.result, 'failure') }}
-#    steps:
-#      -
-#        name: Docker meta
-#        id: meta
-#        uses: docker/metadata-action@v4
-#        with:
-#          images: ${{ env.REGISTRY_IMAGE }}
-#      -
-#        name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - 
-#        name: pull image 
-#        run: |
-#          echo "docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}"
-#          docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-#        env: 
-#          DOCKER_CONTENT_TRUST: 0
-#      -
-#        name: setup trust signature
-#        run: | 
-#          mkdir -p ~/.docker/trust/private
-#          echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-#          chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-#          docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-#        env:
-#          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-#          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-#          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-#      - 
-#        name: sign manifests and push to registry
-#        run: |
-#          docker trust sign ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-#          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-#        env:
-#          DOCKER_CONTENT_TRUST: 1
-#          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-#          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-#          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-#      - 
-#        name: Verify signatures
-#        run: |
-#          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+      - 
+        name: Verify signatures
+        run: |
+          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
