--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -85,17 +85,15 @@ jobs:
           chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
           docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
         env: 
-          DOCKER_CONTENT_TRUST: 0
+#          DOCKER_CONTENT_TRUST: 0
           DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
           DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
           DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-          DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-          DOCKER_CLI_EXPERIMENTAL: enabled
+#          DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+#          DOCKER_CLI_EXPERIMENTAL: enabled
       -
         name: create manifest and push it
         run: | 
-          # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 
-          # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 
           echo "version is ${{ steps.meta.outputs.version }}" 
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
@@ -104,16 +102,15 @@ jobs:
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
         env: 
           DOCKER_CONTENT_TRUST: 0
-          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-          DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-          DOCKER_CLI_EXPERIMENTAL: enabled
+#          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
+#          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
+#          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+#          DOCKER_PRIVATE_KEY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
+#          DOCKER_CLI_EXPERIMENTAL: enabled
       - 
         name: Verify signatures
         run: |
           docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-
       -
         name: check that secure download works
         run: |
